frontend/tests/errors/ER-001/invalid_token/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: invalid token


&^main() -> #i32 {
    let x = @invalid;
    x
}
